# erlang_programming

./: .gitignore
001/: computer.erl  computer.txt  db.erl  frequency.txt  index.txt  listsort.erl  mutex.erl  mylists.erl  textproc.txt
003/: acalc.erl  c3e6.erl  frequency.erl  fsm.erl  index.erl  list.erl  my_db.erl  myring.txt  sideeffect.erl  sum.erl  textproc.erl
004/: echo.erl  ring.erl
005/: event_manager.erl  event_manager.original.erl  event_manager.txt  frequency.erl  fsm.erl  io_handler.erl  log_handler.erl  mutex.erl  my_db.erl  phone.erl  phone.example.erl  server.erl  stats_handler.erl
006/: add_one.erl  add_two.erl  echo.erl  frequency.erl  mutex.erl  my_db.erl  my_supervisor.erl  my_supervisor.original.erl
007/: btree.erl  btree.hrl  db.erl  macros.erl  my_db.erl  records1.erl  shapes.erl  shapes.hrl
008/: db.erl  db_server.erl  my_db.erl
009/: funcs.erl  genertrs.erl  genlen.erl  lazy.erl  mylists.erl  permutations.erl  sequence.erl  ziptest.erl
010/: indexer.erl  indexer.hrl  syslog.erl  syslog.hrl  usr.erl
011/: dictionary.erl  monitoring.erl
012/: my_db_gen.erl  my_db_sup.erl  usr.erl  usr_sup.erl
013/: coordinator.erl  mappet.erl  mappet.hrl  mappet.txt  usr.erl  usr_ctrl.erl  usr_db.erl
014/: blog.hrl  blog_db.erl  microblog.erl  miniblog.erl  myblog.erl
015/: http_proxy.erl  peer.erl  tcp_client.erl  tcp_server.erl  udp_client.erl  udp_server.erl
016/: ServerNode.java  echoFac.erl  echoFac.rb  fac.c  fac.erl  myfact.c  myfact.erl  myfact.php  (+5 more)
016/rust.node/: Cargo.toml  test_rust_node.erl
016/rust.node/src/: main.rs
(+41 files in other folders)
